--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap');
+@import "reset.css";
 
 body{
-    margin: 0;
     font-family: 'Open Sans',sans-serif;
 }
 
