--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
 @import "variables.css";
 /* Components */
 @import "component/status-bar.css";
+@import "component/nav-bar.css";
 /* Screens */
 @import "screens/login.css";
 
