--- a/css/component/nav-bar.css
+++ b/css/component/nav-bar.css
@@ -15,4 +15,30 @@
 
 .nav__link{
     color:#2e363e;
+    position: relative;
+}
+
+.nav__notification{
+    background-color: tomato;
+    width: 25px;
+    height: 25px;
+    display: flex;
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-weight: 600;
+    position: absolute;
+    left: +20px;
+    bottom: +15px;
+}
+
+.nav__dot {
+    background-color: tomato;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    position: absolute;
+    left: 35px;
+    bottom: 28px;
 }
