add some anchor

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,12 @@
 @import "component/screen-header.css";
 /* Screens */
 @import "screens/login.css";
+@import "screens/friends.css";
 
 body{
     font-family: 'Open Sans',sans-serif;
+}
+
+body{
+    color:#2e363e;
 }
