--- a/css/component/screen-header.css
+++ b/css/component/screen-header.css
@@ -1,3 +1,15 @@
 .screen-header{
-    background-color: tomato;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 25px;
+}
+
+.screen-header__title{
+    font-size: 28px;
+    font-weight: 600;
+}
+
+.screen-header__icons span {
+    margin-left: 25px;
 }
