--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
 @import "component/status-bar.css";
 @import "component/nav-bar.css";
 @import "component/screen-header.css";
+@import "component/user-component.css";
 /* Screens */
 @import "screens/login.css";
 @import "screens/friends.css";
