--- a/css/component/user-component.css
+++ b/css/component/user-component.css
@@ -6,6 +6,12 @@
 .user-component-avatar{
     width: 70px;
     height: 70px;
-    border-radius: 30px;
+    border-radius: 27px;
     background-color: aqua;
+    margin-right: 20px;
+}
+
+.user-component__title{
+    font-weight: 600;
+    font-size: 19px;
 }
