--- a/css/component/user-component.css
+++ b/css/component/user-component.css
@@ -4,8 +4,8 @@
 }
 
 .user-component-avatar{
-    width: 70px;
-    height: 70px;
+    width: 50px;
+    height: 50px;
     border-radius: 27px;
     background-color: aqua;
     margin-right: 20px;
@@ -23,6 +23,10 @@
 }
 
 .user-component-avatar--xl{
-    width: 80px;
-    height: 80px;
+    width: 70px;
+    height: 77px;
+}
+
+.friends-screen{
+    padding: 0 var(--horizontal-space);
 }
