--- a/css/component/user-component.css
+++ b/css/component/user-component.css
@@ -1,3 +1,7 @@
+.user-component{
+    justify-content: space-between;
+}
+
 .user-component, .user-component__column:first-child {
     display: flex;
     align-items: center;
@@ -27,6 +31,12 @@
     height: 77px;
 }
 
-.friends-screen{
-    padding: 0 var(--horizontal-space);
+.user-component-avatar--sm {
+    width: 50px;
+    height: 50px;
+    border-radius: 20px;
+}
+
+.user-component__title--not-bold{
+    font-weight: 500;
 }
