--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -9,3 +9,24 @@
     color: rgba(0, 0, 0, 0.3);
     margin-bottom: 5px;
 }
+
+.friends-screen__channel {
+    margin-top: 15px;
+    border-top: 1px solid rgba(0, 0, 0, 0.2);
+    padding-top: 20px;
+}
+
+.friends-screen__channel-header {
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: space-between;
+    color: rgba(0, 0, 0, 0.45);
+}
+
+.user-component__column:last-child {
+    color: rgba(0, 0, 0, 0.45);
+}
+
+.friends-screen {
+    padding: 0 var(--horizontal-space);
+}
