add the alert time

--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -3,6 +3,7 @@
     text-align: center;
     background-color: #eae7e77a;
     padding: 10px 0px;
+    margin-top: -7px;
 }
 
 #friends-display-link i {
