--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -26,6 +26,9 @@
 
 .user-component__column:last-child {
     color: rgba(0, 0, 0, 0.45);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
 
 .friends-screen {
