--- a/css/component/nav-bar.css
+++ b/css/component/nav-bar.css
@@ -33,3 +33,13 @@
     left: 35px;
     bottom: 28px;
 }
+
+.nav__dott {
+    background-color: tomato;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    position: absolute;
+    left: -2px;
+    bottom: 19px;
+}
