--- a/css/component/screen-header.css
+++ b/css/component/screen-header.css
@@ -14,3 +14,18 @@
 .screen-header__icons span {
     margin-left: 25px;
 }
+
+.screen-header__icons__dot{
+    position: relative;
+}
+
+.setting__dot{
+    position: absolute;
+    background-color: tomato;
+    height: 4px;
+    height: 4px;
+    border-radius: 50%;
+    display: block;
+}
+
+
