--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -23,3 +23,65 @@
     border-bottom: var(--main-border);
     padding: 18px 0px;
 }
+
+.recommended-friends__title{
+    color: rgba(0, 0, 0, 0.45);
+    font-size: 15px;
+}
+.recommended-friends span {
+    display: block;
+    margin: 65px 0px;
+    text-align: center;
+    color: rgba(0, 0, 0, 0.5);
+    font-size: 18px;
+    margin-bottom: 25px;
+}
+
+.open-chat__header{
+    display: flex;
+    justify-content: space-between;
+    color: rgba(0, 0, 0, 0.6);
+}
+
+.open-post{
+    display: flex;
+}
+
+.open-post__title{
+    font-weight: 600;
+    margin-bottom: 5px;
+}
+
+.open-post__hashtags{
+    text-transform: uppercase;
+    opacity: 0.6;
+}
+
+.open-post__members{
+    margin-top: 7px;
+    display: flex;
+    align-items: center;
+}
+
+.open-post__members img{
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    margin-right: 5px;
+}
+
+.open-post__member-count{
+    opacity: 0.5;
+    font-size: 14px;
+}
+
+.open-post__members .divider {
+    width: 1px;
+    height: 15px;
+    background-color: rgba(0, 0, 0, 0.5);
+    margin: 0 5px;
+}
+
+.open-post__member-status{
+    color: #ffb0e0;
+}
