i need some help ToT i am tired

--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -85,3 +85,37 @@
 .open-post__member-status{
     color: #ffb0e0;
 }
+
+.open-post__photo img {
+    width: 75px;
+    height: 75px;
+    border-radius: 10px;
+    margin-top: 10px;
+}
+
+.open-post{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.open-post__heart-count{
+    background-color: rgba(0, 0, 0, 0.8);
+    color: white;
+    padding: 5px;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
+    font-size: 14px;
+}
+.open-post__heart-count span{
+    margin-left: 4px;
+}
+
+.open-post__photo{
+    position: relative;
+}
