--- a/css/styles.css
+++ b/css/styles.css
@@ -7,10 +7,12 @@
 @import "component/screen-header.css";
 @import "component/user-component.css";
 @import "component/badge.css";
+@import "component/icon-row.css";
 /* Screens */
 @import "screens/login.css";
 @import "screens/friends.css";
 @import "screens/find.css";
+@import "screens/more.css";
 
 body{
     font-family: 'Open Sans',sans-serif;
