--- a/css/styles.css
+++ b/css/styles.css
@@ -8,11 +8,13 @@
 @import "component/user-component.css";
 @import "component/badge.css";
 @import "component/icon-row.css";
+@import "component/alt-screen-header.css";
 /* Screens */
 @import "screens/login.css";
 @import "screens/friends.css";
 @import "screens/find.css";
 @import "screens/more.css";
+@import "screens/settings.css";
 
 body{
     font-family: 'Open Sans',sans-serif;
